feat: add transaction item note
